<?php

class Fournisseur
{
    private ?int $id;
    private string $nom;
    private ?string $telephone;
    private ?string $email;
    private ?string $adresse;

    public function __construct(
        string $nom,
        ?string $telephone = null,
        ?string $email = null,
        ?string $adresse = null,
        ?int $id = null
    ){
        $this->id = $id;
        $this->nom = $nom;
        $this->telephone = $telephone;
        $this->email = $email;
        $this->adresse = $adresse;
    }

    public function getId(): ?int{
        return $this->id;
    }

    public function setId(?int $id): void{
        $this->id = $id;
    }

    public function getNom(): string{
        return $this->nom;
    }

    public function setNom(string $nom): void{
        $this->nom = $nom;
    }

    public function getTelephone(): ?string{
        return $this->telephone;
    }

    public function setTelephone(?string $telephone): void{
        $this->telephone = $telephone;
    }

    public function getEmail(): ?string{
        return $this->email;
    }

    public function setEmail(?string $email): void{
        $this->email = $email;
    }

    public function getAdresse(): ?string{
        return $this->adresse;
    }

    public function setAdresse(?string $adresse): void{
        $this->adresse = $adresse;
    }
}